# ConnectFour

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: python-app.yml
docs/: d_145eef247bfb46b6_board_py.html  d_145eef247bfb46b6_solver_py.html  d_145eef247bfb46b6_transposition_table_py.html  index.html  status.json
documents/: Kayttoohje.md  Maarittely.md  Testaus.md  Toteutus.md  Viikkoraportti 1.md  Viikkoraportti 2.md  Viikkoraportti 3.md  Viikkoraportti 4.md  Viikkoraportti 5.md  Viikkoraportti 6.md  Viikkoraportti 7.md
src/: board.py  main.py  solver.py  transposition_table.py
src/tests/: board_test.py  solver_test.py  transposition_table_test.py
